# SecurityWatchDaily

./: .gitignore  CHANGELOG.md  CONTEXT.md  README.md  instructions.md  pyproject.toml  sample_asset_inventory.csv  watchlist.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: architecture.md  operations.md  roadmap.md  security-review-2026-06-22.md  securityroadmap.md
docs/decisions/: 0001-local-web-stack.md  0002-local-admin-authentication.md  0003-shared-mode-fail-closed.md
securitywatchdaily/: __init__.py  auth.py  cli.py  config.py  database.py  errors.py  models.py  validation.py
securitywatchdaily/collectors/: __init__.py  cisa.py  hn.py  http.py  msrc.py  paloalto.py  ubuntu.py
securitywatchdaily/repositories/: assets.py  audit.py  connectors.py  platforms.py  runs.py  sources.py
securitywatchdaily/services/: asset_import_service.py  asset_matching_service.py  connector_service.py  finding_service.py  import_service.py  inventory_import_service.py  matching_service.py  normalization_service.py  priority_service.py  run_service.py  source_defaults.py  trace_service.py
securitywatchdaily/web/: html.py  server.py
securitywatchdaily/web/static/: app.css
tests/: test_assets.py  test_audit.py  test_auth.py  test_collectors_ubuntu.py  test_connectors.py  test_http_errors.py  test_inventory_import.py  test_matching.py  test_shared_mode_gate.py  test_storage_and_run.py  test_validation.py  test_web.py
